chore: add installation docs

--- a/apps/website/src/pages/docs/pro/nextjs-starterkit/installation/index.mdx
+++ b/apps/website/src/pages/docs/pro/nextjs-starterkit/installation/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Quickstart
+title: Installation
 description: Getting started quickly with Saas UI Pro.
 ---
 
@@ -17,7 +17,7 @@ After [redeeming](/redeem) your license key you will receive an invitation to th
 
 <SimpleGrid columns={[1, null, 2]} spacing={8} mt="8">
   <QuickLink
-    href="/docs/pro/installation/clone-repository"
+    href="/docs/pro/nextjs-starterkit/installation/clone-repository"
     title="Clone repository"
     description="Clone the Git repository."
     label="Get started"
