--- a/apps/website/src/pages/docs/nextjs-starterkit/index.mdx
+++ b/apps/website/src/pages/docs/nextjs-starterkit/index.mdx
@@ -26,7 +26,7 @@ It includes a comprehensive component library, a full-featured design system, an
 - **Subscription plans**: Manage subscription plans and pricing.
 - **Entitlements**: Manage feature entitlements based on subscription plans.
 - **Stripe integration**: Seamless integration with Stripe for payment processing.
-- **Custom billing apdaters**: Easily integrate other billing providers. _ More built-in providers coming soon. _
+- **Custom billing apdaters**: Easily integrate other billing providers. **More built-in providers coming soon.**
 - **Per seat pricing**: Support for per seat pricing and team-based billing.
 - **Metered billing**: Support for metered billing and usage-based pricing.
 - **Grandfathering**: Support for grandfathering subscriptions of existing customers.
@@ -38,4 +38,4 @@ It includes a comprehensive component library, a full-featured design system, an
 
 ### API
 
-- **tRPC api**: A powerful and flexible API layer built on top of tRPC.
+- **tRPC API**: A powerful and flexible API layer built on top of tRPC.
