chore: update intro

--- a/apps/website/src/pages/docs/nextjs-starterkit/index.mdx
+++ b/apps/website/src/pages/docs/nextjs-starterkit/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Next.js Starterkit
-description: The Saas UI Pro Starterkit is a premium Next.js starterkit for SaaS and B2B projects with a focus on design, accessibility, and development speed.
+description: A premium Next.js starterkit for SaaS and B2B projects with a focus on design, accessibility, and development speed.
 ---
 
 ## Introduction
