--- a/apps/website/src/pages/docs/pro/theming/configuration.mdx
+++ b/apps/website/src/pages/docs/pro/theming/configuration.mdx
@@ -3,14 +3,7 @@ title: Setting the Saas UI Pro theme
 description: How to setup the Saas UI Pro theme in your project.
 ---
 
-## Configure your theme
-
-You can find you base theme in `packages/ui-theme`, this is where you can customize your theme.
-Read more about theme customization on the [Chakra UI website](https://chakra-ui.com/docs/styled-system/customize-theme).
-
-## Add to existing project
-
-If you installed Saas UI Pro into an existing project follow these steps to make sure all Pro components are styled correctly.
+After intalling Saas UI Pro into your project follow these steps to make sure all Pro components are styled correctly.
 
 ```ts
 import { extendTheme } from '@chakra-ui/react'
