--- a/apps/website/src/pages/docs/nextjs-starterkit/authentication/authjs.mdx
+++ b/apps/website/src/pages/docs/nextjs-starterkit/authentication/authjs.mdx
@@ -3,8 +3,8 @@ title: Auth.js (NextAuth) authentication
 description: Using Auth.js (NextAuth) as your authentication service.
 ---
 
-Auth.js, formerly NextAuth is a popular authentication solution for Next.js
-applications. It supports many different authentication providers and is easy to
+NextAuth is a popular authentication solution for Next.js applications.
+It supports many different authentication providers and is easy to
 configure.
 
 ## Install
@@ -17,7 +17,7 @@ cd apps/web && yarn add next-auth
 
 ## Configure
 
-Edit `apps/web/src/features/common/providers/auth.tsx` and replace with the following:
+Edit `apps/web/features/auth/auth-provider.tsx` and replace with the following:
 
 ```tsx
 import React from 'react'
@@ -96,3 +96,5 @@ This is a very basic setup. You can read more about NextAuth and how to configur
 it in the [NextAuth documentation](https://next-auth.js.org/).
 
 You can fetch the session server side using the `getSession` function to improve page load times and use middleware to protect routes.
+
+- [Customize auth screens](/docs/nextjs-starterkit/authentication/customize-auth-screens)
