--- a/apps/website/src/pages/docs/nextjs-starterkit/authentication/clerk.mdx
+++ b/apps/website/src/pages/docs/nextjs-starterkit/authentication/clerk.mdx
@@ -23,17 +23,17 @@ yarn add @clerk/nextjs
 
 ## Configure
 
-2. Copy `apps/web/.env.example` to `apps/web/.env` and add your Clerk publisable key which you can find in the Clerk dashboard.
+2. Edit `apps/web/.env.local` and add your Clerk publisable key which you can find in the Clerk dashboard.
 
 ```bash
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=""
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/login
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/signup
-NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/app
-NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/app
+NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
+NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
 ```
 
-3. Edit `apps/web/src/features/common/providers/auth.tsx` and add the Clerk provider.
+3. Edit `apps/web/features/auth/auth-provider.tsx` and add the Clerk provider.
 
 ```ts
 import { AuthProvider as BaseAuthProvider } from '@saas-ui/auth'
@@ -54,11 +54,11 @@ export const AuthProvider = (props: { children: React.ReactNode }) => {
 
 Your app is now configured to use Clerk for authentication.
 
-Open `http://localhost:3000/app` to try it out.
+Open `http://localhost:3000` to try it out.
 
 ## Troubleshooting
 
-If you get the following error in Next.js you can add the following to `nextjs.config.mjs`.
+If you get the following error in Next.js you can add the following to `next.config.js`.
 This will resolve any ESM / CommonJS issues which can accur with `@clerk/clerk-react` > 4.18
 
 ```
@@ -75,3 +75,4 @@ transpilePackages: [
 ## Next up
 
 - [Clerk Next.js documentation](https://clerk.com/docs/nextjs/get-started-with-nextjs)
+- [Customize auth screens](/docs/nextjs-starterkit/authentication/customize-auth-screens)
