--- a/apps/website/src/pages/docs/nextjs-starterkit/authentication/customize-auth-screens.mdx
+++ b/apps/website/src/pages/docs/nextjs-starterkit/authentication/customize-auth-screens.mdx
@@ -5,8 +5,7 @@ description: How to customize the built-in authentication screens
 
 ## Configure your auth screens
 
-Next you'll need to configure your authentication screens.
-This can be done by editing `packages/app-config/src/auth.ts`.
+The auth screen configuration can be changed in `apps/web/config/auth.ts`
 
 ### 1. Authentication type
 
