--- a/apps/website/src/pages/docs/nextjs-starterkit/authentication/index.mdx
+++ b/apps/website/src/pages/docs/nextjs-starterkit/authentication/index.mdx
@@ -3,7 +3,8 @@ title: Authentication
 description: How to configure authentication.
 ---
 
-The Next.js app comes with a demo authentication service by default. In the following steps you'll learn how to setup your preferred authentication service.
+The Saas UI starterkit supports multiple authentication providers. You can choose the one that best fits your needs.
+It ships with Supabase as the default authentication provider.
 
 <SimpleGrid columns={[1, null, 2]} spacing={8} mt="8">
   <QuickLink
@@ -16,12 +17,6 @@ The Next.js app comes with a demo authentication service by default. In the foll
     href="/docs/pro/authentication/clerk"
     title="Clerk"
     description="Configure Clerk auth."
-    label="Read more"
-  />
-  <QuickLink
-    href="/docs/pro/authentication/magic"
-    title="Magic"
-    description="Configure Magic auth."
     label="Read more"
   />
   <QuickLink
