--- a/apps/website/src/pages/docs/nextjs-starterkit/api/define-procedures.mdx
+++ b/apps/website/src/pages/docs/nextjs-starterkit/api/define-procedures.mdx
@@ -169,3 +169,4 @@ export const postsRouter = createTRPCRouter({
 ## Next steps
 
 - [Read more about tRPC procedures](https://trpc.io/docs/server/procedures)
+- [Fetching data](/docs/nextjs-starterkit/api/fetching-data)
