chore: execute mutation

--- a/apps/website/src/pages/docs/nextjs-starterkit/api/call-procedures.mdx
+++ b/apps/website/src/pages/docs/nextjs-starterkit/api/call-procedures.mdx
@@ -52,7 +52,17 @@ export default function ProfilePage() {
     },
   })
 
-  return <button onClick={}>Save</button>
+  return (
+    <button
+      onClick={() => {
+        mutation.mutate({
+          name: 'John Doe',
+        })
+      }}
+    >
+      Save
+    </button>
+  )
 }
 ```
 
