--- a/apps/website/src/pages/blog/nextjs-create-page-helper-with-loader-pattern.mdx
+++ b/apps/website/src/pages/blog/nextjs-create-page-helper-with-loader-pattern.mdx
@@ -14,7 +14,7 @@ This idea was originally posted by [Rado Stankov](https://blog.rstankov.com/stru
 With the release of the app router in Next.js 13 I've been looking for a way to improve this pattern
 and make better use of RSC (React Server Components), but didn't find a setup yet that I was fully happy with.
 
-Earlier this week I came accross a tweet from [@matt_stobbs](https://x.com/matt_stobbs/status/1807408408011690178) that showed the new
+Earlier this week I came across a tweet from [@matt_stobbs](https://x.com/matt_stobbs/status/1807408408011690178) that showed the new
 `defineRoute` function that will be introduced in React Router (and Remix) when it dawned on me that I could use this
 to improve my `createPage` helper.
 
