chore: update post

--- a/apps/website/src/pages/blog/nextjs-create-page-helper-with-loader-pattern.mdx
+++ b/apps/website/src/pages/blog/nextjs-create-page-helper-with-loader-pattern.mdx
@@ -20,7 +20,7 @@ to improve my `createPage` helper.
 
 ## How it works
 
-Here's an example how the new `createPage` helper is used in the Saas UI Pro starterkit.
+Here's an example how the new `createPage` helper is used in the [Saas UI Pro starterkit](https://saas-ui.dev/nextjs-boilerplate).
 
 ```tsx
 import { notFound } from 'next/navigation'
@@ -100,6 +100,7 @@ You can [find the source code in this gist](https://gist.github.com/Pagebakers/f
 - Should the `component` be wrapped with `Suspense`?
 - Can we hydrate the data returned from the loader function easily to React Query.
 - `cache` the loader function?
+- Turn this into a library?
 
 Please do leave a comment (below the gist) if you have idea's, suggestions or other feedback.
 
