chore: add api routers and database docs

--- a/apps/website/src/pages/docs/nextjs-starterkit/api/index.mdx
+++ b/apps/website/src/pages/docs/nextjs-starterkit/api/index.mdx
@@ -10,7 +10,7 @@ The Next.js starterkit comes with a fully functional API built with [tRPC](https
 tRPC is a modern TypeScript-first API framework that is designed to be easy to use and extend.
 It gives you automatic TypeSafety and autocompletion without the need for build steps.
 
-The API runs in a Next.js route handler by default, but can easily be customized to run in a separate (Fastify) server or serverless (AWS Lambda) function.
+The API runs in a Next.js route handler by default, but can easily be customized to run in a separate (eg. Fastify) server or serverless (AWS Lambda) function.
 
 <SimpleGrid columns={[1, null, null, 2]} spacing={[4, null, 8]}>
   <QuickLink
