chore: rename route

--- a/apps/website/src/pages/docs/nextjs-starter-kit/commands.mdx
+++ b/apps/website/src/pages/docs/nextjs-starter-kit/commands.mdx
@@ -1,9 +1,9 @@
 ---
 title: CLI commands
-description: A list of useful commands for working with the Saas UI Pro Next.js starterkit.
+description: A list of useful commands for working with the Saas UI Next.js starter kit.
 ---
 
-Here is a list of useful commands for working with the Saas UI Pro Next.js starterkit.
+Here is a list of useful commands for working with the Saas UI Next.js starter kit.
 
 | Command                | Description                                      |
 | ---------------------- | ------------------------------------------------ |
