--- a/apps/website/src/pages/docs/nextjs-starter-kit/configuration/environment-variables.mdx
+++ b/apps/website/src/pages/docs/nextjs-starter-kit/configuration/environment-variables.mdx
@@ -1,9 +1,9 @@
 ---
 title: Environment variables
-description: How to configure environment variables in the Saas UI Pro Next.js starterkit.
+description: How to configure environment variables in the Saas UI Next.js starter kit.
 ---
 
-The Saas UI Pro Next.js starterkit uses environment variables to configure the application. This allows you to separate configuration from your codebase and keep sensitive information secure.
+The Saas UI Next.js starter kit uses environment variables to configure the application. This allows you to separate configuration from your codebase and keep sensitive information secure.
 
 ## Configuration
 
