--- a/apps/website/src/pages/docs/nextjs-starter-kit/index.mdx
+++ b/apps/website/src/pages/docs/nextjs-starter-kit/index.mdx
@@ -1,11 +1,11 @@
 ---
-title: Next.js Starterkit
-description: A premium Next.js starterkit for SaaS and B2B projects with a focus on design, accessibility, and development speed.
+title: Next.js starter kit
+description: A premium Next.js starter kit for SaaS and B2B projects with a focus on design, accessibility, and development speed.
 ---
 
 ## Introduction
 
-The Saas UI Pro Starterkit is a premium Next.js starterkit that is designed to help you build beautiful, intuitive web applications with speed.
+The Saas UI Next.js starter kit is a premium starter kit that is designed to help you build beautiful, intuitive web applications with speed.
 It includes a comprehensive component library, a full-featured design system, and a set of best practices for building SaaS and B2B projects.
 
 ## Features
