--- a/apps/website/src/pages/docs/nextjs-starter-kit/tech-stack.mdx
+++ b/apps/website/src/pages/docs/nextjs-starter-kit/tech-stack.mdx
@@ -1,9 +1,9 @@
 ---
 title: Tech stack
-description: An overview of technologies used in the Saas UI Pro Next.js starterkit.
+description: An overview of technologies used in the Saas UI Next.js starter kit.
 ---
 
-The Saas UI Pro Next.js starterkit is built in a monorepo managed by [Yarn](https://yarnpkg.com) and [Turborepo](https://turbo.build/repo).
+The Saas UI Next.js starter kit is built in a monorepo managed by [Yarn](https://yarnpkg.com) and [Turborepo](https://turbo.build/repo).
 
 ## Frameworks
 
@@ -15,7 +15,7 @@ The Saas UI Pro Next.js starterkit is built in a monorepo managed by [Yarn](http
 
 ## Integrations
 
-The starterkit includes these integrations by default:
+The starter kit includes these integrations by default:
 
 - **Supabase**: Authentication.
 - **Stripe**: Payments and subscriptions.
