--- a/apps/website/src/pages/docs/nextjs-starter-kit/development/index.mdx
+++ b/apps/website/src/pages/docs/nextjs-starter-kit/development/index.mdx
@@ -4,4 +4,35 @@ description: 'Get started with developing your Next.js application.'
 ---
 
 Excellent! You've set up your development environment and are ready to start building your Next.js application.
-This guide will walk you through the basics of developing with the Next.js starter kit.
+The following guides will walk you through the basics of developing with the Next.js starter kit.
+
+<SimpleGrid columns={[1, null, 2]} spacing={[0, null, 8]} mt="8">
+  <QuickLink
+    href="/docs/nextjs-starter-kit/add-new-pages"
+    width="100%"
+    title="Adding pages"
+    description="How to create routes and pages."
+    label="Read more"
+  />
+  <QuickLink
+    href="/docs/nextjs-starter-kit/add-new-features"
+    width="100%"
+    title="Adding features"
+    description="How to create new features."
+    label="Read more"
+  />
+  <QuickLink
+    href="/docs/nextjs-starter-kit/forms-and-validation"
+    width="100%"
+    title="Forms and validation"
+    description="How to create and validate forms."
+    label="Read more"
+  />
+  <QuickLink
+    href="/docs/nextjs-starter-kit/error-handling"
+    width="100%"
+    title="Error handling"
+    description="How to handle errors in your application."
+    label="Read more"
+  />
+</SimpleGrid>
