chore(fix): dateinput storybook error (#242)
* chore: fix typo

* chore: update post

* chore: lock

* fix: removed debug logs

* chore: fixed date time picker story

--- a/apps/website/src/pages/blog/nextjs-create-page-helper-with-loader-pattern.mdx
+++ b/apps/website/src/pages/blog/nextjs-create-page-helper-with-loader-pattern.mdx
@@ -14,13 +14,13 @@ This idea was originally posted by [Rado Stankov](https://blog.rstankov.com/stru
 With the release of the app router in Next.js 13 I've been looking for a way to improve this pattern
 and make better use of RSC (React Server Components), but didn't find a setup yet that I was fully happy with.
 
-Earlier this week I came accross a tweet from [@matt_stobbs](https://x.com/matt_stobbs/status/1807408408011690178) that showed the new
+Earlier this week I came across a tweet from [@matt_stobbs](https://x.com/matt_stobbs/status/1807408408011690178) that showed the new
 `defineRoute` function that will be introduced in React Router (and Remix) when it dawned on me that I could use this
 to improve my `createPage` helper.
 
 ## How it works
 
-Here's an example how the new `createPage` helper is used in the Saas UI Pro starterkit.
+Here's an example how the new `createPage` helper is used in the [Saas UI Pro starterkit](https://saas-ui.dev/nextjs-boilerplate).
 
 ```tsx
 import { notFound } from 'next/navigation'
@@ -100,6 +100,7 @@ You can [find the source code in this gist](https://gist.github.com/Pagebakers/f
 - Should the `component` be wrapped with `Suspense`?
 - Can we hydrate the data returned from the loader function easily to React Query.
 - `cache` the loader function?
+- Turn this into a library?
 
 Please do leave a comment (below the gist) if you have idea's, suggestions or other feedback.
 
