--- a/apps/website/src/pages/docs/nextjs-starter-kit/tech-stack.mdx
+++ b/apps/website/src/pages/docs/nextjs-starter-kit/tech-stack.mdx
@@ -7,7 +7,7 @@ The Saas UI Next.js starter kit is built in a monorepo managed by [Yarn](https:/
 
 ## Frameworks
 
-- **Next.js**: Using [App Router](https://nextjs.org/docs/app).
+- **Next.js**: Using [App Router](https://nextjs.org/docs/app) and [Turbo pack](https://turbo.build/pack).
 - **Postgres**: Managed by [Drizzle](https://orm.drizzle.team), supports self-hosted Postgres or managed services like [Supabase](https://supabase.com) or [Neon](https://neon.tech).
 - **Chakra UI**: UI library for building accessible and responsive web applications.
 - **tRPC**: A powerful and flexible API layer built on top of [tRPC](https://trpc.io).
