--- a/apps/website/src/pages/docs/nextjs-starter-kit/index.mdx
+++ b/apps/website/src/pages/docs/nextjs-starter-kit/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Next.js starter kit
+title: Next.js SaaS starter kit
 description: A premium Next.js starter kit for SaaS and B2B projects with a focus on design, accessibility, and development speed.
 ---
 
@@ -12,9 +12,9 @@ It includes a comprehensive component library, a full-featured design system, an
 
 ### Authentication
 
-- **Authentication flows**: A complete authentication flow with email verification and password reset.
+- **Authentication flows**: Log in, sign up and account management.
 - **Social login**: Support for social login, like Google and Facebook.
-- **Auth providers**: Easily switch between different authentication providers.
+- **Auth providers**: Easily switch between different authentication providers. Next Auth is the default.
 
 ### Accounts
 
