--- a/apps/website/src/pages/docs/nextjs-starter-kit/installation/index.mdx
+++ b/apps/website/src/pages/docs/nextjs-starter-kit/installation/index.mdx
@@ -3,30 +3,27 @@ title: Installation
 description: Getting started quickly with Saas UI Pro.
 ---
 
-The Saas UI Pro repository contains source code for all components and examples, as well as the starter kit / demo application.
+After [redeeming](/redeem) your license key you will receive an invitation to
+the private Github repository and get access to the NPM registry.
+
+The Saas UI Pro repository contains source code for all components and examples, as well as the Next.js starter kit.
 Get started quickly by cloning the repository and running the demo application.
 
-Saas UI Pro source code ships in a private git repository, the base components are published to a private NPM registry.
-After [redeeming](/redeem) your license key you will receive an invitation to the private Github repository and get access to the NPM registry.
-
-<Info>
-  If you already have an existing project or want to start from scratch you can
-  install the base components from the private NPM registry. This will also make
-  it easier to keep everything up to date.
-</Info>
+The Saas UI Pro packages are also available through our private NPM registry. This allows you to install them
+in existing projects and also makes it easier to keep everything up to date.
 
 <SimpleGrid columns={[1, null, 2]} spacing={8} mt="8">
   <QuickLink
-    href="/docs/pro/nextjs-starterkit/installation/clone-repository"
+    href="/docs/pro/nextjs-starter-kit/installation/clone-repository"
     title="Clone repository"
     description="Clone the Git repository."
     label="Get started"
   />
 
   <QuickLink
-    href="/docs/pro/installation/private-npm/overview"
-    title="Private NPM"
-    description="Setting up the Private NPM registry."
+    href="/docs/pro/nextjs-starter-kit/installation/run-application"
+    title="Run the application"
+    description="How to run the application locally."
     label="Get started"
   />
 </SimpleGrid>
