--- a/apps/website/src/pages/docs/nextjs-starter-kit/tech-stack.mdx
+++ b/apps/website/src/pages/docs/nextjs-starter-kit/tech-stack.mdx
@@ -17,12 +17,13 @@ The Saas UI Next.js starter kit is built in a monorepo managed by [Yarn](https:/
 
 The starter kit includes these integrations by default:
 
-- **Supabase**: Authentication.
+- **Auth.js**: Authentication.
 - **Stripe**: Payments and subscriptions.
 - **Resend**: Email delivery.
 
 Other integrations:
 
+- **Supabase**: Authentication.
 - **Lemonsqueezy**: Payments and subscriptions. _Coming soon_
 
 ## Development tools
