--- a/apps/website/src/pages/docs/nextjs-starter-kit/authentication/authjs.mdx
+++ b/apps/website/src/pages/docs/nextjs-starter-kit/authentication/authjs.mdx
@@ -7,94 +7,20 @@ NextAuth is a popular authentication solution for Next.js applications.
 It supports many different authentication providers and is easy to
 configure.
 
-## Install
-
-Install Next Auth in `apps/web`.
-
-```bash
-cd apps/web && yarn add next-auth
-```
+NextAuth v5 is the default authentication provider for the Next.js starterkit
+and is configured using Resend (email) provider.
 
 ## Configure
 
-Edit `apps/web/features/auth/auth-provider.tsx` and replace with the following:
+The NextAuth configuration is located in `packages/auth-authjs/src` and is split up
+into two files:
 
-```tsx
-import React from 'react'
-import {
-  AuthProvider as BaseAuthProvider,
-  AuthProviderProps,
-  User,
-} from '@saas-ui/auth'
-import { SessionProvider, signIn, signOut, useSession } from 'next-auth/react'
-import { Session } from 'next-auth'
+- `config.ts` - The edge compatible configuration, used in Next.js middleware.
+- `auth.ts` - The main NextAuth configuration.
 
-const createAuthService = (session: Session | null): AuthProviderProps => {
-  return {
-    onLogin: async ({ provider, email }, options) => {
-      const type = provider ?? 'email'
-
-      let params: Record<string, any> = {
-        callbackUrl: options?.redirectTo,
-      }
-
-      if (email) {
-        params = {
-          email,
-          redirect: false, // do not redirect to NextAuth login page
-          ...params,
-        }
-      }
-
-      const result = await signIn(type, params)
-
-      if (result?.ok) {
-        //
-      }
-
-      return undefined
-    },
-    onLogout: () => signOut(),
-    onLoadUser: async () => (session?.user as User) || null,
-    onGetToken: async () => {
-      // we don't have access to any token, so just returning the user email here.
-      return session?.user?.email
-    },
-  }
-}
-
-/**
- * Wrap the AuthProvider here so we can get access to the NextAuth context
- */
-const Provider: React.FC<React.PropsWithChildren> = (props) => {
-  const { data } = useSession()
-  return (
-    <BaseAuthProvider {...createAuthService(data)}>
-      {props.children}
-    </BaseAuthProvider>
-  )
-}
-
-export interface AuthProviderProps {
-  session?: Session | null
-  children: React.ReactNode
-}
-
-export const AuthProvider: React.FC<AuthProviderProps> = (props) => {
-  const { children, session } = props
-  return (
-    <SessionProvider session={session}>
-      <Provider>{children}</Provider>
-    </SessionProvider>
-  )
-}
-```
+Please refer to the [NextAuth documentation](https://authjs.dev/getting-started/authentication) for more
+information on how to configure NextAuth.
 
 ## Next up
-
-This is a very basic setup. You can read more about NextAuth and how to configure
-it in the [NextAuth documentation](https://next-auth.js.org/).
-
-You can fetch the session server side using the `getSession` function to improve page load times and use middleware to protect routes.
 
 - [Customize auth screens](/docs/nextjs-starterkit/authentication/customize-auth-screens)
