--- a/apps/website/src/pages/docs/nextjs-starter-kit/authentication/index.mdx
+++ b/apps/website/src/pages/docs/nextjs-starter-kit/authentication/index.mdx
@@ -3,10 +3,16 @@ title: Authentication
 description: How to configure authentication.
 ---
 
-The Saas UI starterkit supports multiple authentication providers. You can choose the one that best fits your needs.
-It ships with Supabase as the default authentication provider.
+The Next.js starterkit supports multiple authentication providers. You can choose the one that best fits your needs.
+It ships with Next Auth (Auth.js) as the default authentication provider.
 
-<SimpleGrid columns={[1, null, 2]} spacing={8} mt="8">
+<SimpleGrid columns={[1, null, 3]} spacing={8} mt="8">
+  <QuickLink
+    href="/docs/pro/authentication/authjs"
+    title="Auth.js"
+    description="Configure Auth.js (NextAuth)."
+    label="Read more"
+  />
   <QuickLink
     href="/docs/pro/authentication/supabase"
     title="Supabase"
@@ -17,12 +23,6 @@ It ships with Supabase as the default authentication provider.
     href="/docs/pro/authentication/clerk"
     title="Clerk"
     description="Configure Clerk auth."
-    label="Read more"
-  />
-  <QuickLink
-    href="/docs/pro/authentication/authjs"
-    title="Auth.js"
-    description="Configure Auth.js (NextAuth)."
     label="Read more"
   />
 </SimpleGrid>
