--- a/apps/website/src/pages/docs/nextjs-starter-kit/project-structure.mdx
+++ b/apps/website/src/pages/docs/nextjs-starter-kit/project-structure.mdx
@@ -3,7 +3,7 @@ title: Project structure
 description: How to find your way in the project.
 ---
 
-Saas UI Pro is setup as a monorepo which is managed by Yarn v3 and Turbo Repo.
+Saas UI Pro is setup as a monorepo which is managed by Yarn v4 and Turbo Repo.
 
 ## Folder structure
 
@@ -16,15 +16,17 @@ The folder structure looks as following:
 | `apps/web/features/common` |                      | The app's common functionality, for example layouts, that is shared across features. |
 | `apps/web/features/*`      |                      | Domain specific code is grouped within individual features.                          |
 | `packages/api`             | @acme/api            | The tRPC API service.                                                                |
+| `packages/auth-authjs`     | @acme/auth-authjs    | Auth.js (NextAuth) authentication adapter                                            |
 | `packages/auth-supabase`   | @acme/auth-supabase  | Supabase authentication adapter                                                      |
 | `packages/billing-stripe`  | @acme/billing-stripe | Stripe billing adapter                                                               |
 | `packages/config`          | @acme/config         | Configuration for billing plans and feature flags                                    |
+| `packages/env`             | @acme/env            | Type-safe environment variables                                                      |
 | `packages/db`              | @acme/db             | Database schemas and migrations using Drizzle                                        |
 | `packages/email`           | @acme/email          | Email service using Resend                                                           |
 | `packages/i18n`            | @acme/i18n           | i18n helpers and utilities                                                           |
 | `packages/next`            | @acme/next           | Next.js helpers and utilities                                                        |
-| `packages/ui-lib`          | @ui/lib              | This is your shared UI library, and included all custom pre-built components         |
-| `packages/ui-theme`        | @ui/theme            | Your custom Chakra UI theme. This extends the Saas UI Pro theme by default.          |
+| `packages/ui`              | @acme/ui             | This is your shared UI library, and included all custom pre-built components         |
+| `packages/theme`           | @acme/theme          | Your custom Chakra UI theme. This extends the Saas UI Pro theme by default.          |
 
 ## Features
 
