--- a/apps/website/src/pages/docs/nextjs-starter-kit/theming/configuration.mdx
+++ b/apps/website/src/pages/docs/nextjs-starter-kit/theming/configuration.mdx
@@ -1,33 +1,75 @@
 ---
-title: Setting the Saas UI Pro theme
-description: How to setup the Saas UI Pro theme in your project.
+title: Configure your theme
+description: How to configure and customize your theme.
 ---
 
 ## Configure your theme
 
-You can find you base theme in `packages/ui-theme`, this is where you can customize your theme.
+You can find you base theme in `packages/theme`, this is where you can customize your theme.
+
 Read more about theme customization on the [Chakra UI website](https://chakra-ui.com/docs/styled-system/customize-theme).
 
-## Add to existing project
-
-If you installed Saas UI Pro into an existing project follow these steps to make sure all Pro components are styled correctly.
-
-```ts
+```tsx
 import { extendTheme } from '@chakra-ui/react'
+import {
+  theme as baseTheme,
+  /* withThemeColors */
+} from '@saas-ui-pro/react'
 
-// 1. Import the pro theme
-import { theme as baseTheme } from '@saas-ui-pro/react'
+// import { theme as glassTheme } from '@saas-ui-pro/theme-glass'
+import { components } from './components'
+import semanticTokens from './foundations/semantic-tokens'
 
-// 2. Extend your theme
-const theme = extendTheme(
+// import colorScheme from './color-schemes/galaxy'
+// import colorScheme from './color-schemes/earth'
+
+export const theme = extendTheme(
   {
-    // your custom theme
+    semanticTokens,
+    components,
   },
+  /**
+   * Uncomment this to use any of the built-in color schemes.
+   */
+  // withThemeColors(colorScheme),
+  // glassTheme,
   baseTheme
 )
+```
 
-// 3. Pass the custom theme to SaasProvider
-function App() {
-  return <SaasProvider theme={theme}>{children}</SaasProvider>
-}
+The theme extends the Saas UI Pro default theme and includes a set of [semantic tokens](https://chakra-ui.com/docs/styled-system/semantic-tokens) and custom component styles.
+
+## Glass theme
+
+To use the glass theme, replace the `baseTheme` with `glassTheme`.
+
+```tsx
+export const theme = extendTheme(
+  {
+    semanticTokens,
+    components,
+  },
+  glassTheme
+)
+```
+
+## Color schemes
+
+The project ships with a number of color schemes that you can use out of the box.
+Color schemes are different from themes, they only change the color palette of the theme.
+
+To use a color scheme, import it and pass it to the `withThemeColors` function.
+
+```tsx
+import { withColorScheme, theme as baseTheme } from '@saas-ui-pro/react'
+import colorScheme from './color-schemes/galaxy'
+
+export const theme = extendTheme(
+  {
+    semanticTokens,
+    components,
+  },
+  withColorScheme(colorScheme),
+  baseTheme
+)
 ```
