chore: add billing docs

--- a/apps/website/src/pages/docs/nextjs-starter-kit/billing/index.mdx
+++ b/apps/website/src/pages/docs/nextjs-starter-kit/billing/index.mdx
@@ -3,7 +3,7 @@ title: 'Billing'
 description: 'Learn how to manage billing in your application'
 ---
 
-Billing is one of the most important aspects of any SaaS application.
+Billing is one of the most important aspects of any SaaS application, if you're not getting paid, you're not in business.
 The Saas UI Next.js starter kit comes with a robust billing module that allows you to manage subscriptions, payments, and entitlements in your application.
 
 ## Features
