--- a/apps/website/src/pages/docs/nextjs-starter-kit/installation/index.mdx
+++ b/apps/website/src/pages/docs/nextjs-starter-kit/installation/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Installation
-description: Getting started quickly with Saas UI Pro.
+description: Getting started quickly with the Next.js starter kit.
 ---
 
 After [redeeming](/redeem) your license key you will receive an invitation to
