feat: update billing docs

--- a/apps/website/src/pages/docs/nextjs-starter-kit/configuration/environment-variables.mdx
+++ b/apps/website/src/pages/docs/nextjs-starter-kit/configuration/environment-variables.mdx
@@ -17,9 +17,14 @@ This allows you to separate configuration from your codebase and keep sensitive 
 
 Environment variables should always be configured using your CI/CD provider. For example, GitHub Actions, Vercel, etc. Never store secrets in your repository.
 
-You can copy the `.env.example` file to `.env` and fill in the values.
+Run `yarn turbo gen env` to generate a new .env file.
+
+Alternatively, you can copy the `.env.example` file to `.env` and fill in the values.
 
 ```bash
+# The public URL of the application
+APP_URL=http://localhost:3000
+
 # Default plan id for new accounts.
 # Plans are configured in `packages/config/billing.config.ts`.
 DEFAULT_PLAN_ID=free@1
@@ -27,21 +32,18 @@ DEFAULT_PLAN_ID=free@1
 # Email
 # The email address that will be used to send emails from the application.
 # This domain must be verified in your email provider.
-FROM_EMAIL="hello@saas-ui.dev"
+EMAIL_FROM="hello@saas-ui.dev"
+
+# Resend (default email provider)
+# You can find this value in your Resend project settings.
+RESEND_API_KEY=
 
 # Database
 # Uses a local docker instance by default.
 DATABASE_URL=postgres://admin:admin@localhost:5432/dev
 
-# Supabase (default Auth provider)
-# You can find these values in your Supabase project settings.
-NEXT_PUBLIC_SUPABASE_URL=
-NEXT_PUBLIC_SUPABASE_ANON_KEY=
-SUPABASE_SERVICE_KEY=
-
-# Resend (default email provider)
-# You can find this value in your Resend project settings.
-RESEND_API_KEY=
+# Auth.js
+AUTH_SECRET=
 
 # Stripe (default payment provider)
 # You can find these values in your Stripe dashboard, under developer settings.
@@ -55,14 +57,10 @@ STRIPE_WEBHOOK_SECRET=
 All environment variables are defined using a Zod schema in `packages/env/env.ts`.
 This allows us to validate the environment variables and give us type-safety / auto-completion in our codebase.
 
-You can import environment variables from `env`:
+You can import environment variables from `env`, only `NEXT_PUBLIC_` prefixed variables are exposed to the client.
 
 ```ts
 import { env } from 'env'
 
 console.log(env.DATABASE_URL)
-
-// or
-
-console.log(env.NEXT_PUBLIC_SUPABASE_URL)
 ```
