--- a/apps/website/src/pages/docs/nextjs-starter-kit/billing/unit-based-usage.mdx
+++ b/apps/website/src/pages/docs/nextjs-starter-kit/billing/unit-based-usage.mdx
@@ -27,4 +27,43 @@ export const getFeatureCounts = async (args: { accountId: string }) => {
 
 ## Checking usage limits
 
-TBD
+### Client
+
+The `@saas-ui-pro/billing` package contains hooks to check usage limits.
+
+```tsx
+import { useLimitReached } from '@saas-ui-pro/billing'
+
+const members = 10 // eg the number of users in the workspace returned from the API.
+
+const limitReached = useLimitReached('users', members.length)
+```
+
+This will compare the supplied member count to the usage limit configured in the active plan of the user.
+
+The `BillingProvider` containing the plans and user subscription info can be found in `apps/web/features/billing/providers/billing-provider.tsx`.
+
+You should never depend only on the client to check for usage limits, always make sure to check the usage limits on the server as well.
+
+### Server
+
+The `billing` service of the API has a `limitReached` function that can be used to check if a limit has been reached.
+
+It works the same way as the client side hook, but it takes the account id as argument and returns a boolean value.
+
+```ts
+// packages/api/modules/my-module/my-module.service.ts
+import { limitReached, throwIfLimitReached } from '#modules/billing'
+
+const limitReached = await limitReached({
+  planId,
+  featureId: 'users',
+  quantity: 10,
+}) // true or false
+
+throwIfLimitReached({
+  planId,
+  featureId: 'users',
+  quantity: 10,
+}) // throws an error if the limit is reached
+```
